# cli

./: .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  OPENANALYST.md  PARITY.md  README.md  RESEARCH.md  SECURITY.md  index.html  install.ps1  install.sh  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
backend/: .env.example  Dockerfile  app.py  auth.py  aws-userdata.sh  config.py  docker-compose.yml  models.py  requirements.txt
backend/migrations/: import_catalog_to_neo4j.py  sqlite_to_neo4j.py
backend/routers/: health.py  knowledge.py
backend/services/: __init__.py  base.py  neo4j_backend.py  sqlite_backend.py  synthesis.py
docs/: Index.html  index.html  setup-guide.html  version.js
docs/Documentation/: agents.html  architecture.html  authentication.html  commands.html  configuration.html  index.html  installation.html  mcp.html  providers.html  quickstart.html  styles.css  tools.html  tui.html
ink-tui/: package.json  tsconfig.json
ink-tui/src/: app.tsx  index.tsx
ink-tui/src/components/: ask-user-dialog.tsx  assistant-message.tsx  autocomplete.tsx  banner.tsx  chat-panel.tsx  context-file-tags.tsx  diff-view.tsx  feedback-widget.tsx  file-output.tsx  input-box.tsx  knowledge-card.tsx  markdown-renderer.tsx  message-list.tsx  mode-badge.tsx  permission-dialog.tsx  sidebar-activity.tsx  sidebar-agents.tsx  sidebar-files.tsx  sidebar-plans.tsx  sidebar-routing.tsx  sidebar.tsx  spinner.tsx  status-bar.tsx  system-message.tsx  toast-display.tsx  tool-card.tsx  user-message.tsx
ink-tui/src/contexts/: chat-context.tsx  index.ts  keypress-context.tsx  session-context.tsx  terminal-context.tsx  theme-context.tsx  ui-state-context.tsx
ink-tui/src/engine/: bridge.ts  engine-context.tsx  index.ts
ink-tui/src/hooks/: use-credits.ts  use-engine.ts  use-input-history.ts  use-keypress.ts  use-session.ts  use-voice.ts
ink-tui/src/key/: commands.ts  index.ts  keybindings.ts
ink-tui/src/layouts/: default-layout.tsx
ink-tui/src/mcp/: check-playwright.ts  index.ts  playwright-context.tsx  playwright-lifecycle.ts  playwright-tools.ts
ink-tui/src/themes/: colors.ts  index.ts  semantic-tokens.ts  theme-manager.ts  theme.ts
ink-tui/src/types/: chat.ts  index.ts  messages.ts  protocol.ts  sql.js.d.ts
ink-tui/src/utils/: api-key.ts  credential-manager.ts  credit-checker.ts  provider-preferences.ts  session-manager.ts  slash-commands.ts  voice-recorder.ts  whisper.ts
knowledgeBase/: README.md  SKILL.md  requirements-knowledge-base.txt  requirements-transcription.txt
knowledgeBase/docs/: FIRST_TIME_OPERATOR_LAUNCH_GUIDE.md  FLEET_OPERATIONS.md  RUNBOOKS.md  TRANSCRIPTION_OBJECTIVES.md  TRANSCRIPTION_PROCESS.md  VIDEO_ANALYSIS_GUIDE.md
knowledgeBase/docs/plans/: 2026-02-22-ltx-founder-ugc-60s-package.md  2026-03-08-nvidia-data-designer-harness-design.md  2026-03-08-nvidia-data-designer-harness.md  2026-03-30-live-per-run-artifact-sync-design.md  2026-03-30-live-per-run-artifact-sync.md  2026-03-30-transcription-orchestrator-skill-design.md  2026-03-30-transcription-orchestrator-skill-plan.md
knowledgeBase/profiles/: workers.example.json
knowledgeBase/tools/: __init__.py  catalog_jobs.py  catalog_web.py  list_types.py  llm_judge.py  mega_prefetch.py  transcribe_mega_folder.py
knowledgeBase/tools/transcript_kb/: __init__.py
rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
rust/.openanalyst/: knowledge.db
rust/crates/api/src/: client.rs  error.rs  lib.rs  types.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs  openanalyst_provider.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/events/: Cargo.toml
rust/crates/events/src/: lib.rs
rust/crates/lsp/src/: client.rs
rust/crates/openanalyst-agent/: Cargo.toml
rust/crates/openanalyst-agent/src/: lib.rs
rust/crates/openanalyst-cli/: Cargo.toml  build.rs
rust/crates/openanalyst-cli/src/: app.rs  args.rs  init.rs  main.rs  render.rs
rust/crates/orchestrator/: Cargo.toml
rust/crates/orchestrator/src/: agent.rs  autonomous.rs  context.rs  lib.rs  loop_detection.rs  moe.rs  registry.rs  router.rs  worker.rs
rust/crates/orchestrator/src/knowledge/: db.rs  expert.rs  intent.rs  mod.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: agents_config.rs  bash.rs  bootstrap.rs  branding.rs  compression.rs  config.rs  config_paths.rs  conversation.rs  file_ops.rs  folder_trust.rs  hooks.rs  ide_detect.rs  lib.rs  mcp.rs  mcp_bridge.rs  oauth.rs  output_masking.rs  output_styles.rs  policy.rs  prompt.rs  remote.rs  rules.rs  sandbox.rs  settings.rs  skills.rs  tokenizer.rs  usage.rs
rust/crates/server/src/: lib.rs
rust/crates/tools/: .gitignore
rust/crates/tools/src/: lib.rs
rust/crates/tui/: Cargo.toml
rust/crates/tui-widgets/: Cargo.toml
rust/crates/tui-widgets/src/: agent_card.rs  feedback_dialog.rs  file_tree.rs  input_box.rs  knowledge_card.rs  lib.rs  markdown.rs  permission_dialog.rs  spinner.rs  status_bar.rs  tool_card.rs
rust/crates/tui/examples/: dev_preview.rs  dev_preview_text.rs
rust/crates/tui/src/: app.rs  autocomplete.rs  banner.rs  event_loop.rs  headless.rs  keybinding_config.rs  keybindings.rs  layout.rs  lib.rs  slash_commands.rs  theme.rs  voice.rs
rust/crates/tui/src/panels/: chat.rs  mod.rs  sidebar.rs  status.rs
scripts/: build.js  postinstall.js
src/: __init__.py  context.py  main.py  parity_audit.py
src/reference_data/: archive_surface_snapshot.json
tests/: test-login-flow.js
vscode-extension/: package.json
vscode-extension/src/: diff-manager.ts  extension.test.ts  extension.ts  ide-server.test.ts  ide-server.ts  open-files-manager.ts
vscode-extension/src/utils/: logger.ts
