[workspace]
members = ["crates/*"]
exclude = ["crates/tui-widgets"]  # Archived — ratatui widget library replaced by Ink TUI
resolver = "2"

[workspace.package]
version = "2.0.11"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
# ratatui and crossterm removed — ratatui TUI archived to _archived/ratatui-tui/

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
