[package]
name = "openanalyst-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
tools = { path = "../tools" }
plugins = { path = "../plugins" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[lints]
workspace = true
