[package]
name = "openanalyst-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "openanalyst"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
openanalyst-agent = { path = "../openanalyst-agent" }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }
walkdir = "2"
tui = { path = "../tui" }
orchestrator = { path = "../orchestrator" }
events = { path = "../events" }

[lints]
workspace = true
