[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
events = { path = "../events" }
runtime = { path = "../runtime" }
api = { path = "../api" }
tools = { path = "../tools" }
plugins = { path = "../plugins" }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
