[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
events = { path = "../events" }
runtime = { path = "../runtime" }
api = { path = "../api" }
tools = { path = "../tools" }
plugins = { path = "../plugins" }
commands = { path = "../commands" }
serde_json = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[lints]
workspace = true
