[package]
name = "tui-widgets"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
events = { path = "../events" }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }

# Ecosystem widgets — reuse, don't reinvent
tui-markdown = { version = "0.3", features = ["highlight-code"] }
syntect-tui = "3"
edtui = "0.11"
tui-textarea = "0.7"
tui-tree-widget = "0.24"
throbber-widgets-tui = "0.11"
arboard = "3"

[lints]
workspace = true
