[package]
name = "tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
events = { path = "../events" }
orchestrator = { path = "../orchestrator" }
tui-widgets = { path = "../tui-widgets" }
runtime = { path = "../runtime" }
api = { path = "../api" }
tools = { path = "../tools" }
plugins = { path = "../plugins" }
commands = { path = "../commands" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
edtui = "0.11"

[lints]
workspace = true
