[package]
name = "tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Headless JSON-RPC bridge needs only these
events = { path = "../events" }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
anyhow = "1"

# Ratatui TUI dependencies have been removed.
# The original ratatui code is archived at _archived/ratatui-tui/.
# Removed: ratatui, crossterm, tui-widgets, orchestrator, runtime, api,
#   tools, plugins, commands, reqwest, edtui, cpal, hound, base64

[lints]
workspace = true
